--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-django~=4.1
-djangorestframework~=3.13.1
-django-filter~=22.1
+django
+djangorestframework
+django-filter
 psycopg2-binary
-
-pytest~=7.1.3
+pytest
